--- a/style.css
+++ b/style.css
@@ -100,7 +100,10 @@ p{
     text-align: center;
     background-color: rgb(253, 253, 253);
     display: flex;
-    justify-content: space-between;
+    width: 90%;
+    align-items: center;
+    margin-left: 5%;
+    margin-top: 5%;
    }
 
    p {
@@ -109,13 +112,13 @@ p{
    }
 
 .reloj{
-    background-color: rgb(0, 132, 255);
+    background-color: rgb(172, 172, 172);
     display: block;
     align-items: center;
     border-radius: 30px;
 }
 .candado{
-    background-color: blueviolet;
+    background-color: rgb(172, 172, 172);
     display: block;
     align-items: center;
     justify-content: center;
@@ -124,7 +127,7 @@ p{
     
 }
 .corona{
-    background-color: chocolate;
+    background-color: rgb(172, 172, 172);
     display: block;
     margin-left: 30px;
     align-items: center;
