--- a/style.css
+++ b/style.css
@@ -133,3 +133,10 @@ p{
     align-items: center;
     border-radius: 30px;
 }
+.nav{
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
