--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ p{
 .contenedor {
     margin-bottom: 20px;
     text-align: center;
-    background-color: rgb(253, 253, 253);
+    background-color: rgb(116, 193, 91);
     display: flex;
     width: 90%;
     align-items: center;
@@ -108,30 +108,40 @@ p{
 
    p {
     margin: 25px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     
    }
 
 .reloj{
-    background-color: rgb(172, 172, 172);
+    background-color: rgb(123, 212, 81);
     display: block;
     align-items: center;
     border-radius: 30px;
+    box-shadow: 2px 2px 10px;
+    width: 950px;
+    height: 500px;
+    text-align: center;
 }
 .candado{
-    background-color: rgb(172, 172, 172);
+    background-color: rgb(123, 212, 81);
     display: block;
     align-items: center;
     justify-content: center;
     border-radius: 30px;
     margin-left: 30px;
-    
+    box-shadow: 2px 2px 10px;
+    width: 950px;
+    height: 500px;
 }
 .corona{
-    background-color: rgb(172, 172, 172);
+    background-color: rgb(123, 212, 81);
     display: block;
     margin-left: 30px;
     align-items: center;
     border-radius: 30px;
+    box-shadow: 2px 2px 10px;
+    width: 950px;
+    height: 500px;
 }
 .nav{
     background-color: rgb(0, 0, 0);
@@ -141,9 +151,32 @@ p{
 }
 .offcanvas-body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-image: none;
+    background-color: rgb(116, 193, 91);
 }
 .formularios{
     display: flex;
     align-items: column;
+}
+.scoobyneta{
+    width: 1300px;
+    height: 530px;
+    display:flex;
+    margin: 78px;
+    align-items: center;
+    justify-content: center;
+}
+.fondo1{
+    background-color: rgb(116, 193, 91);
+}
+.img-fluid{
+    width: 1300px;
+    height: 530px;
+    display:flex;
+    margin: 78px;
+    align-items: center;
+    justify-content: center;
+
+}
+.proteccion{
+    text-align: center;
 }
