--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ p{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
    }
 
 .contenedor {
@@ -104,7 +105,8 @@ p{
     align-items: center;
     margin-left: 5%;
     margin-top: 5%;
-   }
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ }
 
    p {
     margin: 25px;
@@ -164,19 +166,322 @@ p{
     margin: 78px;
     align-items: center;
     justify-content: center;
+    width: 60%;
 }
 .fondo1{
     background-color: rgb(116, 193, 91);
 }
 .img-fluid{
-    width: 1300px;
+    align-items: center;
+    justify-content: center;
     height: 530px;
     display:flex;
     margin: 78px;
-    align-items: center;
-    justify-content: center;
-
+    width: 87%;
 }
+
+
 .proteccion{
     text-align: center;
 }
+.container1{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: rgb(54, 173, 242);
+    font-family: 'Courier New', Courier, monospace;
+    padding: 0 20px;
+    text-align: center;
+    
+}
+.card-container1{
+    display: flex;
+    width: 600px;
+    height: auto;
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+}
+.header1{
+   border-right: 1px solid #ddd; 
+}
+.descripcion1{
+    background: #fbfbfb;
+}
+.header1, .descripcion1{
+    padding: 20px;
+    text-align: center;
+}
+.container2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: rgb(54, 173, 242);
+    font-family: 'Courier New', Courier, monospace;
+    padding: 0 20px;
+    text-align: center;
+}
+.card-container2{
+    display: flex;
+    width: 600px;
+    height: auto;
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+}
+.header2{
+   border-right: 1px solid #ddd; 
+}
+.descripcion2{
+    background: #fbfbfb;
+}
+.header2, .descripcion2{
+    padding: 20px;
+    text-align: center;
+}
+.container3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: rgb(54, 173, 242);
+    font-family: 'Courier New', Courier, monospace;
+    padding: 0 20px;
+}
+.card-container3{
+    display: flex;
+    width: 600px;
+    height: auto;
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+}
+.header3{
+   border-right: 1px solid #ddd; 
+}
+.descripcion3{
+    background: #fbfbfb;
+}
+.header3, .descripcion3{
+    padding: 20px;
+    text-align: center;
+}
+.container4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: rgb(54, 173, 242);
+    font-family: 'Courier New', Courier, monospace;
+    padding: 0 20px;
+}
+.card-container4{
+    display: flex;
+    width: 600px;
+    height: auto;
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+}
+.header4{
+   border-right: 1px solid #ddd; 
+}
+.descripcion4{
+    background: #fbfbfb;
+}
+.header4, .descripcion4{
+    padding: 20px;
+    text-align: center;
+}
+.container4{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: rgb(54, 173, 242);
+    font-family: 'Courier New', Courier, monospace;
+    padding: 0 20px;
+}
+.card-container4{
+    display: flex;
+    width: 600px;
+    height: auto;
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+    text-align: center;
+}
+.header4{
+   border-right: 1px solid #ddd; 
+}
+.descripcion4{
+    background: #fbfbfb;
+}
+.header4, .descripcion4{
+    padding: 20px;
+    text-align: center;
+}
+
+
+.container5{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: rgb(54, 173, 242);
+    font-family: 'Courier New', Courier, monospace;
+    padding: 0 20px;
+}
+.card-container5{
+    display: flex;
+    width: 600px;
+    height: auto;
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+}
+.header5{
+   border-right: 1px solid #ddd; 
+}
+.descripcion5{
+    background: #fbfbfb;
+}
+.header5, .descripcion5{
+    padding: 20px;
+    text-align: center;
+}
+.container5{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background: rgb(54, 173, 242);
+    font-family: 'Courier New', Courier, monospace;
+    padding: 0 20px;
+}
+.card-container5{
+    display: flex;
+    width: 600px;
+    height: auto;
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+}
+.header5{
+   border-right: 1px solid #ddd; 
+}
+.descripcion5{
+    background: #fbfbfb;
+}
+.header5, .descripcion5{
+    padding: 20px;
+    text-align: center; 
+}
+.divsupremo{
+    background: rgb(54, 173, 242);
+    display: block;
+    
+}
+.links{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(54, 173, 242);
+    font-size: larger;
+}
+a {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.fondo2{
+    background-color: rgb(54, 173, 242);
+}
+.casas1-3{
+    display: flex;
+    justify-content: space-around;
+}
+.casas4-6{
+    display: flex;
+    justify-content: space-around;
+}
+.fondo3{
+    background: rgb(246, 111, 7);
+}
+.login{
+    display:flex;
+    justify-content: center;
+    margin-top: 150px;
+    margin-left: 580px;
+    text-align: center;
+    background: rgb(255, 255, 255);
+    padding: 40px;
+    width: 20%; 
+    border-radius: 20px;
+    box-shadow: 2px 3px 3px 2px;
+}
+.fondo4{
+    background: rgb(141, 54, 241);
+}
+.inputContainer{
+    display: flex;
+    margin-bottom: 10px;
+    box-shadow: 4px 4px 4px ;
+}
+.video{
+    display: flex;
+    justify-content: center;
+}
+.fondo5{
+    background: rgb(0, 0, 0);
+}
+h2{                                       
+    text-align: center;
+    color: rgb(54, 173, 242);
+} 
+.titulo23{
+    color: rgb(240, 41, 41);
+}
+@media (max-width:500px){
+    .fondo1{
+        background-color: rgb(50, 80, 204);
+    }
+}
+@media (max-width:500px){
+    .texto-inicio{
+        color: rgb(0, 225, 255);
+        text-align: center;
+        
+    }
+}
+@media (max-width:376px){
+    .img-fluid{
+        width: 100%;
+        height: 250px;
+        padding: 15px;
+        font-size: larger;
+        border-radius: 20%;
+        width: 100%;
+    }
+}
+@media (max-width:376px){
+    .navbar-toggler{
+        color: rgb(0, 157, 255);
+
+
+    }
+}
+@media (max-width:376){
+    .contenedor{
+        display: block;
+        background: rgb(50, 80, 204);
+    }
+}
+@media screen and (width-max:376px){
+    .fondo4{
+        background: rgb(137, 30, 236);
+        
+    }
+  }
