--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -1,13 +1,22 @@
+@import "colores";
+@import "medidas";
+@import "fuentes";
+@import "imagenes";
+@import "texto";
+@import "estructuras";
+
+@import "condicionales";
+
 .inicio-h1{
-    color: rgb(157, 0, 255);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    color: rgb(0, 0, 0);
+    font-family: $fuente-primaria;
 }
 p{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: $fuente-primaria;
     font-size: larger
 }
 .parrafo-fred{
-    color: rgb(0, 157, 255);
+    color: $color-secundario;
 }
 .parrafo-daphne{
     color: rgb(204, 0, 255);
@@ -16,77 +25,77 @@ p{
     color: rgb(255, 115, 0);
 }
 .parrafo-shaggy{
-    color: rgba(68, 255, 0, 0.817);
+    color: $color-primario;
 }
 .parrafo-scooby{
     color: peru
 }
 .fred{
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
+    width: $anchura-primaria;
+    height: $altura-primaria;
+    border-radius: $bordes-1;
 }
 .daphne{
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
+    width: $anchura-primaria;
+    height: $altura-primaria;
+    border-radius: $bordes-1;
 }
 .velma{
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
+    width: $anchura-primaria;
+    height: $altura-primaria;
+    border-radius: $bordes-1;
 }
 .shaggy{
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
+    width: $anchura-primaria;
+    height: $altura-primaria;
+    border-radius: $bordes-1;
 }
 .scooby{
-    width: 200px;
-    height: 200px;
-    border-radius: 10px;
+    width: $anchura-primaria;
+    height: $altura-primaria;
+    border-radius: $bordes-1;
 }
 .casa-1{
-    width: 250px;
-    height: 200px;
+    width: $anchura-secundaria;
+    height: $altura-primaria;
 }
 .casa-2{
-    width: 250px;
-    height: 200px;
+    width: $anchura-secundaria;
+    height: $altura-primaria;
 }
 .casa-3{
-    width: 250px;
-    height: 200px;
+    width: $anchura-secundaria;
+    height: $altura-primaria;
 }
 .casa-4{
-    width: 250px;
-    height: 200px;
+    width: $anchura-secundaria;
+    height: $altura-primaria;
 }
 .casa-5{
-    width: 250px;
-    height: 200px;
+    width: $anchura-secundaria;
+    height: $altura-primaria;
 }
 .casa-6{
-    width: 250px;
-    height: 200px;
+    width: $anchura-secundaria;
+    height: $altura-primaria;
 }
 .reloj1{
-    width: 200px;
-    height: 200px;
-    border-radius: 20px;
-    margin: 30px;
+    width: $anchura-primaria;
+    height: $altura-primaria;
+    border-radius: $bordes-2;
+    margin: $margen-1;
 }
 .candado2{
-    width: 200px;
-    height: 200px;
-    border-radius: 20px;
-    margin: 30px
+    width: $anchura-primaria;
+    height: $altura-primaria;
+    border-radius: $bordes-2;
+    margin: $margen-1;
 }
 .corona3{
-    width: 200px;
-    height: 200px;
-    border-radius: 20px;
-    margin: 30px
+    width: $anchura-primaria;
+    height: $altura-primaria;
+    border-radius: $bordes-2;
+    margin: $margen-1;
 }
 
 * {
@@ -99,51 +108,51 @@ p{
 .contenedor {
     margin-bottom: 20px;
     text-align: center;
-    background-color: rgb(116, 193, 91);
+    background-color: $color-primario;
     display: flex;
     width: 90%;
     align-items: center;
     margin-left: 5%;
     margin-top: 5%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: $fuente-primaria;
  }
 
    p {
     margin: 25px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: $fuente-primaria;
     
    }
 
 .reloj{
-    background-color: rgb(123, 212, 81);
+    background-color: $color-primario;
     display: block;
     align-items: center;
-    border-radius: 30px;
-    box-shadow: 2px 2px 10px;
-    width: 950px;
-    height: 500px;
+    border-radius: $bordes-3;
+    box-shadow: $sombra-2;
+    width: $anchura-4;
+    height: $altura-terciaria;
     text-align: center;
 }
 .candado{
-    background-color: rgb(123, 212, 81);
+    background-color: $color-primario;
     display: block;
     align-items: center;
     justify-content: center;
-    border-radius: 30px;
-    margin-left: 30px;
-    box-shadow: 2px 2px 10px;
-    width: 950px;
-    height: 500px;
+    border-radius: $bordes-3;
+    margin-left: $margen-izquierdo;
+    box-shadow: $sombra-2;
+    width: $anchura-4;
+    height: $altura-terciaria;
 }
 .corona{
-    background-color: rgb(123, 212, 81);
+    background-color: $color-primario;
     display: block;
-    margin-left: 30px;
+    margin-left: $margen-izquierdo;
     align-items: center;
-    border-radius: 30px;
-    box-shadow: 2px 2px 10px;
-    width: 950px;
-    height: 500px;
+    border-radius: $bordes-3;
+    box-shadow: $sombra-2;
+    width: $anchura-4;
+    height: $altura-terciaria;
 }
 .nav{
     background-color: rgb(0, 0, 0);
@@ -152,8 +161,8 @@ p{
     justify-content: center;
 }
 .offcanvas-body{
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: rgb(116, 193, 91);
+    font-family: $fuente-primaria;
+    background-color: $color-primario;
 }
 .formularios{
     display: flex;
@@ -161,22 +170,22 @@ p{
 }
 .scoobyneta{
     width: 1300px;
-    height: 530px;
+    height: $altura-4;
     display:flex;
-    margin: 78px;
+    margin: $margen-2;
     align-items: center;
     justify-content: center;
     width: 60%;
 }
 .fondo1{
-    background-color: rgb(116, 193, 91);
+    background-color: $color-primario;
 }
 .img-fluid{
     align-items: center;
     justify-content: center;
-    height: 530px;
+    height: $altura-4;
     display:flex;
-    margin: 78px;
+    margin: $margen-2;
     width: 87%;
 }
 
@@ -188,199 +197,160 @@ p{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: rgb(54, 173, 242);
-    font-family: 'Courier New', Courier, monospace;
-    padding: 0 20px;
+    height: $altura-secundaria;
+    background: $color-secundario;
+    font-family: $fuente-secundaria;
+    padding: 0 $padding;
     text-align: center;
     
 }
 .card-container1{
     display: flex;
-    width: 600px;
+    width: $anchura-terciaria;
     height: auto;
-    background: #fff;
+    background: $color-terciario;
     border-radius: 2px;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+    box-shadow: $sombra rgba(0, 0, 0, 2);
 }
 .header1{
-   border-right: 1px solid #ddd; 
+   border-right: 1px solid $color-terciario; 
 }
 .descripcion1{
-    background: #fbfbfb;
+    background: $color-terciario;
 }
 .header1, .descripcion1{
-    padding: 20px;
+    padding: $padding;
     text-align: center;
 }
 .container2{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: rgb(54, 173, 242);
-    font-family: 'Courier New', Courier, monospace;
-    padding: 0 20px;
+    height: $altura-secundaria;
+    background: $color-secundario;
+    font-family: $fuente-secundaria;
+    padding: 0 $padding;
     text-align: center;
 }
 .card-container2{
     display: flex;
-    width: 600px;
+    width: $anchura-terciaria;
     height: auto;
-    background: #fff;
-    border-radius: 2px;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+    background: $color-terciario;
+    border-radius: $bordes-4;
+    box-shadow: $sombra rgba(0, 0, 0, 2);
 }
 .header2{
-   border-right: 1px solid #ddd; 
+   border-right: 1px solid $color-terciario; 
 }
 .descripcion2{
-    background: #fbfbfb;
+    background: $color-terciario;
 }
 .header2, .descripcion2{
-    padding: 20px;
+    padding: $padding;
     text-align: center;
 }
 .container3{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: rgb(54, 173, 242);
-    font-family: 'Courier New', Courier, monospace;
-    padding: 0 20px;
+    height: $altura-secundaria;
+    background: $color-secundario;
+    font-family: $fuente-secundaria;
+    padding: 0 $padding;
 }
 .card-container3{
     display: flex;
-    width: 600px;
+    width: $anchura-terciaria;
     height: auto;
-    background: #fff;
-    border-radius: 2px;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+    background: $color-terciario;
+    border-radius: $bordes-4;
+    box-shadow: $sombra rgba(0, 0, 0, 2);
 }
 .header3{
-   border-right: 1px solid #ddd; 
+   border-right: 1px solid $color-terciario; 
 }
 .descripcion3{
-    background: #fbfbfb;
+    background: $color-terciario;
 }
 .header3, .descripcion3{
-    padding: 20px;
+    padding: $padding;
     text-align: center;
 }
 .container4{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: rgb(54, 173, 242);
-    font-family: 'Courier New', Courier, monospace;
-    padding: 0 20px;
+    height: $altura-secundaria;
+    background: $color-secundario;
+    font-family: $fuente-secundaria;
+    padding: 0 $padding;
 }
 .card-container4{
     display: flex;
-    width: 600px;
+    width: $anchura-terciaria;
     height: auto;
-    background: #fff;
-    border-radius: 2px;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+    background: $color-terciario;
+    border-radius: $bordes-4;
+    box-shadow: $sombra rgba(0, 0, 0, 2);
 }
 .header4{
-   border-right: 1px solid #ddd; 
+   border-right: 1px solid $color-terciario; 
 }
 .descripcion4{
-    background: #fbfbfb;
+    background: $color-terciario;
 }
 .header4, .descripcion4{
-    padding: 20px;
+    padding: $padding;
     text-align: center;
 }
 .container4{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: rgb(54, 173, 242);
-    font-family: 'Courier New', Courier, monospace;
-    padding: 0 20px;
+    height: $altura-secundaria;
+    background: $color-secundario;
+    font-family: $fuente-secundaria;
+    padding: 0 $padding;
 }
 .card-container4{
     display: flex;
-    width: 600px;
+    width: $anchura-terciaria;
     height: auto;
-    background: #fff;
-    border-radius: 2px;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
-    text-align: center;
-}
-.header4{
-   border-right: 1px solid #ddd; 
-}
-.descripcion4{
-    background: #fbfbfb;
-}
-.header4, .descripcion4{
-    padding: 20px;
-    text-align: center;
-}
-
-
-.container5{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background: rgb(54, 173, 242);
-    font-family: 'Courier New', Courier, monospace;
-    padding: 0 20px;
-}
-.card-container5{
-    display: flex;
-    width: 600px;
-    height: auto;
-    background: #fff;
-    border-radius: 2px;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
-}
-.header5{
-   border-right: 1px solid #ddd; 
-}
-.descripcion5{
-    background: #fbfbfb;
-}
-.header5, .descripcion5{
-    padding: 20px;
+    background: $color-terciario;
+    border-radius: $bordes-4;
+    box-shadow: $sombra rgba(0, 0, 0, 2);
     text-align: center;
 }
 .container5{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: rgb(54, 173, 242);
-    font-family: 'Courier New', Courier, monospace;
-    padding: 0 20px;
+    height: $altura-secundaria;
+    background: $color-secundario;
+    font-family: $fuente-secundaria;
+    padding: 0 $padding;
 }
 .card-container5{
     display: flex;
-    width: 600px;
+    width: $anchura-terciaria;
     height: auto;
-    background: #fff;
-    border-radius: 2px;
-    box-shadow: 1px 1px 4px 2px rgba(0, 0, 0, 2);
+    background: $color-terciario;
+    border-radius: $bordes-4;
+    box-shadow: $sombra rgba(0, 0, 0, 2);
 }
 .header5{
-   border-right: 1px solid #ddd; 
+   border-right: 1px solid $color-terciario; 
 }
 .descripcion5{
-    background: #fbfbfb;
+    background: $color-terciario;
 }
 .header5, .descripcion5{
-    padding: 20px;
-    text-align: center; 
+    padding: $padding;
+    text-align: center;
 }
 .divsupremo{
-    background: rgb(54, 173, 242);
+    background: $color-secundario;
     display: block;
     
 }
@@ -388,7 +358,7 @@ p{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: rgb(54, 173, 242);
+    background-color: $color-secundario;
     font-size: larger;
 }
 a {
@@ -397,7 +367,7 @@ a {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .fondo2{
-    background-color: rgb(54, 173, 242);
+    background-color: $color-secundario;
 }
 .casas1-3{
     display: flex;
@@ -416,10 +386,10 @@ a {
     margin-top: 150px;
     margin-left: 580px;
     text-align: center;
-    background: rgb(255, 255, 255);
+    background: $color-terciario;
     padding: 40px;
     width: 20%; 
-    border-radius: 20px;
+    border-radius: $bordes-2;
     box-shadow: 2px 3px 3px 2px;
 }
 .fondo4{
@@ -439,7 +409,7 @@ a {
 }
 h2{                                       
     text-align: center;
-    color: rgb(54, 173, 242);
+    color: $color-secundario;
 } 
 .titulo23{
     color: rgb(240, 41, 41);
@@ -451,7 +421,7 @@ h2{
 }
 @media (max-width:500px){
     .texto-inicio{
-        color: rgb(0, 225, 255);
+        color: $color-secundario;
         text-align: center;
         
     }
@@ -459,7 +429,7 @@ h2{
 @media (max-width:376px){
     .img-fluid{
         width: 100%;
-        height: 250px;
+        height: $anchura-secundaria;
         padding: 15px;
         font-size: larger;
         border-radius: 20%;
@@ -473,15 +443,30 @@ h2{
 
     }
 }
-@media (max-width:376){
+@media (max-width:376px){
     .contenedor{
         display: block;
         background: rgb(50, 80, 204);
     }
 }
-@media screen and (width-max:376px){
+@media (max-width:376px){
     .fondo4{
         background: rgb(137, 30, 236);
         
     }
   }
+  @media (max-width: 376px){
+    .casas1-3{
+      grid-template-columns: 1fr;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  @media (max-width: 376px){
+    .casas4-6{
+      grid-template-columns: 1fr;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+  
