--- a/css/styles.css
+++ b/css/styles.css
@@ -128,8 +128,8 @@
   background: rgb(0, 0, 0);
 }
 
-.inicio-h1 {
-  color: rgb(157, 0, 255);
+.tituloP {
+  color: rgb(0, 0, 0);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
@@ -453,7 +453,7 @@ h2 {
 }
 
 .inicio-h1 {
-  color: rgb(157, 0, 255);
+  color: rgb(0, 0, 0);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
