--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -5,7 +5,8 @@
 @import "texto";
 @import "estructuras";
 
-@import "condicionales";
+@import "mixin";
+ 
 
  .inicio-h1{
     color: rgb(0, 0, 0);
@@ -408,38 +409,38 @@ h2{
 .titulo23{
     color: rgb(240, 41, 41);
 }
-@media (max-width:500px){
+@media (max-width:376px){
     .fondo1{
         background-color: rgb(50, 80, 204);
     }
 }
-@media (max-width:500px){
+@media (max-width:376px){
     .texto-inicio{
         color: $color-secundario;
         text-align: center;
-        
+        display: flex;
+        justify-content: center;
     }
 }
 @media (max-width:376px){
     .img-fluid{
-        width: 100%;
         height: $anchura-secundaria;
-        padding: 15px;
         font-size: larger;
         border-radius: 20%;
-        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        
     }
 }
 @media (max-width:376px){
     .navbar-toggler{
         color: rgb(0, 157, 255);
-
-
     }
 }
 @media (max-width:376px){
     .contenedor{
-        display: block;
+        display: flex;
         background: rgb(50, 80, 204);
     }
 }
@@ -463,4 +464,20 @@ h2{
       align-items: center;
     }
   }
-  
+@media (max-width:376px){
+    .formLogin{
+        display: block;
+        justify-content: center;
+        align-items: center;
+        padding-right: 1100px;
+        padding-left: 180px;
+        padding-bottom: 2px;
+    }
+}
+@media (max-width:376px){
+    .talktous{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
