--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -6,61 +6,55 @@
 @import "estructuras";
 
 @import "mixin";
- 
 
- .tituloP{
+
+.tituloP {
     color: rgb(0, 0, 0);
     font-family: $fuente-primaria;
     padding-top: 120px;
 }
- p{
+
+p {
     font-family: $fuente-primaria;
     font-size: larger
 }
 
- .parrafo-fred{
-    color: $color-secundario;
-}
-
- .parrafo-daphne{
-    color: rgb(204, 0, 255);
-}
-
- .parrafo-velma{
-    color: rgb(255, 115, 0);
-}
-
- .parrafo-shaggy{
-    color: $color-primario;
-}
-
-.parrafo-scooby{
-    color: peru
-}
-
-.Foto-cara{
+.Foto-cara {
     width: $anchura-primaria;
     height: $altura-primaria;
     border-radius: $bordes-1;
 }
-.card-img-top{
+
+.card-img-top {
     width: 250px;
     height: 200px;
     display: flex;
+    margin-top: 20px;
 }
+
+.card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-height: 630px;
+}
+
 .reloj1{
     width: $anchura-primaria;
     height: $altura-primaria;
     border-radius: $bordes-2;
     margin: $margen-1;
+    margin-right: 30px;
 }
-.candado2{
+
+.candado2 {
     width: $anchura-primaria;
     height: $altura-primaria;
     border-radius: $bordes-2;
     margin: $margen-1;
 }
-.corona3{
+
+.corona3 {
     width: $anchura-primaria;
     height: $altura-primaria;
     border-radius: $bordes-2;
@@ -71,8 +65,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    
-   }
+
+}
 
 .contenedor {
     margin-bottom: 20px;
@@ -84,15 +78,15 @@
     margin-left: 5%;
     margin-top: 5%;
     font-family: $fuente-primaria;
- }
+}
 
-   p {
+p {
     margin: 25px;
     font-family: $fuente-primaria;
-    
-   }
 
-.reloj{
+}
+
+.reloj {
     background-color: $color-primario;
     display: block;
     align-items: center;
@@ -102,7 +96,8 @@
     height: $altura-terciaria;
     text-align: center;
 }
-.candado{
+
+.candado {
     background-color: $color-primario;
     display: display;
     align-items: center;
@@ -113,7 +108,8 @@
     width: $anchura-4;
     height: $altura-terciaria;
 }
-.corona{
+
+.corona {
     background-color: $color-primario;
     display: block;
     margin-left: $margen-izquierdo;
@@ -123,46 +119,43 @@
     width: $anchura-4;
     height: $altura-terciaria;
 }
-.nav{
+
+.nav {
     background-color: rgb(0, 0, 0);
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.offcanvas-body{
+
+.offcanvas-body {
     font-family: $fuente-primaria;
     background-color: $color-primario;
 }
-.formularios{
+
+.formularios {
     display: flex;
     align-items: column;
 }
-.scoobyneta{
-    width: 1300px;
-    height: $altura-4;
-    display:flex;
-    margin: $margen-2;
-    align-items: center;
-    justify-content: center;
-    width: 60%;
-}
-.fondo1{
+
+.fondo1 {
     background-color: $color-primario;
 }
-img{
+
+.cazafantasmas {
     align-items: center;
     justify-content: center;
     height: $altura-4;
-    display:flex;
+    display: flex;
     margin: $margen-2;
     width: 87%;
 }
 
 
-.proteccion{
+.proteccion {
     text-align: center;
 }
-.container1{
+
+.container1 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -171,93 +164,68 @@ img{
     font-family: $fuente-secundaria;
     padding: 0 $padding;
     text-align: center;
-    
+
 }
-.card-container1{
+
+.card-container1 {
     display: flex;
     width: $anchura-terciaria;
     height: auto;
     background: $color-terciario;
     border-radius: 2px;
     box-shadow: $sombra rgba(0, 0, 0, 2);
+
 }
-.header1{
-   border-right: 1px solid $color-terciario; 
+
+.header1 {
+    border-right: 1px solid $color-terciario;
 }
-.descripcion1{
+
+.descripcion1 {
     background: $color-terciario;
 }
-.header1, .descripcion1{
-    padding: $padding;
-    text-align: center;
-}
-.container2{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: $altura-secundaria;
-    background: $color-secundario;
-    font-family: $fuente-secundaria;
-    padding: 0 $padding;
-    text-align: center;
-}
-.card-container2{
-    display: flex;
-    width: $anchura-terciaria;
-    height: auto;
-    background: $color-terciario;
-    border-radius: $bordes-4;
-    box-shadow: $sombra rgba(0, 0, 0, 2);
-}
-.header2{
-   border-right: 1px solid $color-terciario; 
-}
-.descripcion2{
-    background: $color-terciario;
-}
-.header2, .descripcion2{
-    padding: $padding;
-    text-align: center;
-}
-.container3{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: $altura-secundaria;
-    background: $color-secundario;
-    font-family: $fuente-secundaria;
-    padding: 0 $padding;
-}
-.card-container3{
-    display: flex;
-    width: $anchura-terciaria;
-    height: auto;
-    background: $color-terciario;
-    border-radius: $bordes-4;
-    box-shadow: $sombra rgba(0, 0, 0, 2);
-}
-.header3{
-   border-right: 1px solid $color-terciario; 
-}
-.descripcion3{
-    background: $color-terciario;
-}
-.header3, .descripcion3{
+
+.header1,
+.descripcion1 {
     padding: $padding;
     text-align: center;
 }
 
-.header4{
-   border-right: 1px solid $color-terciario; 
+.container2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: $altura-secundaria;
+    background: $color-secundario;
+    font-family: $fuente-secundaria;
+    padding: 0 $padding;
+    text-align: center;
 }
-.descripcion4{
+
+.card-container2 {
+    display: flex;
+    width: $anchura-terciaria;
+    height: auto;
+    background: $color-terciario;
+    border-radius: $bordes-4;
+    box-shadow: $sombra rgba(0, 0, 0, 2);
+}
+
+.header2 {
+    border-right: 1px solid $color-terciario;
+}
+
+.descripcion2 {
     background: $color-terciario;
 }
-.header4, .descripcion4{
+
+.header2,
+.descripcion2 {
     padding: $padding;
     text-align: center;
 }
-.container4{
+
+.container3 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -266,16 +234,45 @@ img{
     font-family: $fuente-secundaria;
     padding: 0 $padding;
 }
-.card-container4{
+
+.card-container3 {
     display: flex;
     width: $anchura-terciaria;
     height: auto;
     background: $color-terciario;
     border-radius: $bordes-4;
     box-shadow: $sombra rgba(0, 0, 0, 2);
+}
+
+.header3 {
+    border-right: 1px solid $color-terciario;
+}
+
+.descripcion3 {
+    background: $color-terciario;
+}
+
+.header3,
+.descripcion3 {
+    padding: $padding;
     text-align: center;
 }
-.container5{
+
+.header4 {
+    border-right: 1px solid $color-terciario;
+}
+
+.descripcion4 {
+    background: $color-terciario;
+}
+
+.header4,
+.descripcion4 {
+    padding: $padding;
+    text-align: center;
+}
+
+.container4 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -284,30 +281,58 @@ img{
     font-family: $fuente-secundaria;
     padding: 0 $padding;
 }
-.card-container5{
+
+.card-container4 {
     display: flex;
     width: $anchura-terciaria;
     height: auto;
     background: $color-terciario;
     border-radius: $bordes-4;
     box-shadow: $sombra rgba(0, 0, 0, 2);
+    text-align: center;
 }
-.header5{
-   border-right: 1px solid $color-terciario; 
+
+.container5 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: $altura-secundaria;
+    background: $color-secundario;
+    font-family: $fuente-secundaria;
+    padding: 0 $padding;
 }
-.descripcion5{
+
+.card-container5 {
+    display: flex;
+    width: 600px;
+    height: auto;
     background: $color-terciario;
+    border-radius: $bordes-4;
+    box-shadow: $sombra rgba(0, 0, 0, 2);
 }
-.header5, .descripcion5{
+
+.header5 {
+    border-right: 1px solid $color-terciario;
+}
+
+.descripcion5 {
+    background: $color-terciario;
+    width: 200px;
+}
+
+.header5,
+.descripcion5 {
     padding: $padding;
     text-align: center;
 }
-.divsupremo{
+
+.divsupremo {
     background: $color-secundario;
     display: block;
-    
+
 }
-.links{
+
+.links {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -315,82 +340,103 @@ img{
     font-size: larger;
     margin-top: 80px;
 }
+
 a {
     color: rgb(0, 0, 0);
     text-decoration: none;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-.fondo2{
+
+.fondo2 {
     background-color: $color-secundario;
 }
-.casas1-3{
+
+.casas1-3 {
     display: flex;
     justify-content: space-around;
     padding-bottom: 25px;
     margin-top: 100px;
 }
-.casas4-6{
+
+.casas4-6 {
     display: flex;
     justify-content: space-around;
 }
-.fondo3{
+
+.fondo3 {
     background: rgb(246, 111, 7);
 }
-.login{
-    display:flex;
+
+.login {
+    display: flex;
     justify-content: center;
     margin-top: 220px;
     margin-left: 580px;
     text-align: center;
     background: $color-terciario;
     padding: 40px;
-    width: 20%; 
+    width: 20%;
     border-radius: $bordes-2;
     box-shadow: 2px 3px 3px 2px;
 }
-.fondo4{
+
+.fondo4 {
     background: rgb(141, 54, 241);
 }
-.inputContainer{
+
+.inputContainer {
     display: flex;
     margin-bottom: 10px;
-    box-shadow: 4px 4px 4px ;
+    box-shadow: 4px 4px 4px;
 }
-.video{
+
+.video {
     display: flex;
     justify-content: center;
 }
-.fondo5{
+
+.fondo5 {
     background: rgb(0, 0, 0);
 }
-h2{                                       
+
+h2 {
     text-align: center;
     color: $color-secundario;
-} 
-.titulo23{
+}
+
+.titulo23 {
     color: rgb(240, 41, 41);
     padding-top: 100px;
     padding-bottom: 20px;
 }
-.titulo4{
+
+.titulo4 {
     padding-top: 70px;
     padding-bottom: 25px;
 }
-@media (max-width:376px){
-    .fondo1{
+
+.scooby {
+    display: flex;
+    padding-right: 100px;
+}
+
+@media (max-width:376px) {
+    .fondo1 {
         background-color: rgb(50, 80, 204);
     }
 }
-@media (max-width:376px){
-    p{
+
+@media (max-width:376px) {
+    p {
         color: $color-secundario;
         text-align: center;
         display: flex;
         justify-content: center;
     }
 }
-@media (max-width:376px){
-    img{
+
+@media (max-width:376px) {
+    img {
         height: $anchura-secundaria;
         font-size: larger;
         border-radius: 20%;
@@ -401,39 +447,45 @@ h2{
         width: 100%;
     }
 }
-@media (max-width:376px){
-    .navbar-toggler{
+
+@media (max-width:376px) {
+    .navbar-toggler {
         color: rgb(0, 157, 255);
     }
 }
-@media (max-width:376px){
-    .contenedor{
+
+@media (max-width:376px) {
+    .contenedor {
         display: flex;
         background: rgb(50, 80, 204);
     }
 }
-@media (max-width:376px){
-    .fondo4{
+
+@media (max-width:376px) {
+    .fondo4 {
         background: rgb(137, 30, 236);
-        
+
     }
-  }
-  @media (max-width: 376px){
-    .casas1-3{
-      grid-template-columns: 1fr;
-      flex-direction: column;
-      align-items: center;
+}
+
+@media (max-width: 376px) {
+    .casas1-3 {
+        grid-template-columns: 1fr;
+        flex-direction: column;
+        align-items: center;
     }
-  }
-  @media (max-width: 376px){
-    .casas4-6{
-      grid-template-columns: 1fr;
-      flex-direction: column;
-      align-items: center;
+}
+
+@media (max-width: 376px) {
+    .casas4-6 {
+        grid-template-columns: 1fr;
+        flex-direction: column;
+        align-items: center;
     }
-  }
-@media (max-width:376px){
-    .formLogin{
+}
+
+@media (max-width:376px) {
+    .formLogin {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -441,21 +493,24 @@ h2{
         padding-left: 180px;
     }
 }
-@media (max-width:376px){
-    .talktous{
+
+@media (max-width:376px) {
+    .talktous {
         display: flex;
         align-items: center;
         justify-content: center;
     }
 }
-@media (max-width:376px){
-    h1{
+
+@media (max-width:376px) {
+    h1 {
         display: flex;
         text-align: center;
     }
 }
-@media (max-width:376px){
-    .reloj1{
+
+@media (max-width:376px) {
+    .reloj1 {
         display: flex;
         align-items: column;
         justify-content: space-around;
