--- a/SCSS/_imagenes.scss
+++ b/SCSS/_imagenes.scss
@@ -1,107 +1,89 @@
- .fred{
+.Foto-cara {
     width: $anchura-primaria;
     height: $altura-primaria;
     border-radius: $bordes-1;
 }
- .daphne{
-    width: $anchura-primaria;
-    height: $altura-primaria;
-    border-radius: $bordes-1;
+
+.card-img-top {
+    width: 250px;
+    height: 200px;
+    display: flex;
+    margin-top: 20px;
 }
- .velma{
-    width: $anchura-primaria;
-    height: $altura-primaria;
-    border-radius: $bordes-1;
-}
- .shaggy{
-    width: $anchura-primaria;
-    height: $altura-primaria;
-    border-radius: $bordes-1;
-}
- .scooby{
-    width: $anchura-primaria;
-    height: $altura-primaria;
-    border-radius: $bordes-1;
-}
- .casa-1{
-    width: $anchura-secundaria;
-    height: $altura-primaria;
-}
- .casa-2{
-    width: $anchura-secundaria;
-    height: $altura-primaria;
-}
- .casa-3{
-    width: $anchura-secundaria;
-    height: $altura-primaria;
-}
- .casa-4{
-    width: $anchura-secundaria;
-    height: $altura-primaria;
-}
- .casa-5{
-    width: $anchura-secundaria;
-    height: $altura-primaria;
-}
- .casa-6{
-    width: $anchura-secundaria;
-    height: $altura-primaria;
-}
- .reloj1{
-    width: $anchura-primaria;
-    height: $altura-primaria;
-    border-radius: $bordes-2;
-    margin: $margen-1;
-}
- .candado2{
-    width: $anchura-primaria;
-    height: $altura-primaria;
-    border-radius: $bordes-2;
-    margin: $margen-1;
-}
- .corona3{
-    width: $anchura-primaria;
-    height: $altura-primaria;
-    border-radius: $bordes-2;
-    margin: $margen-1;
-}
- .scoobyneta{
-    width: 1300px;
-    height: $altura-4;
-    display:flex;
-    margin: $margen-2;
+
+.card {
+    display: flex;
     align-items: center;
     justify-content: center;
-    width: 60%;
+    max-height: 630px;
 }
- .fondo1{
-    background-color: $color-primario;
+
+.reloj1 {
+    width: $anchura-primaria;
+    height: $altura-primaria;
+    border-radius: $bordes-2;
+    margin: $margen-1;
+    margin-right: 30px;
 }
- .img-fluid{
+
+.candadoycorona {
+    width: $anchura-primaria;
+    height: $altura-primaria;
+    border-radius: $bordes-2;
+    margin: $margen-1;
+}
+
+.cazafantasmas {
     align-items: center;
     justify-content: center;
     height: $altura-4;
-    display:flex;
+    display: flex;
     margin: $margen-2;
     width: 87%;
 }
- .fondo2{
+
+.fondo1 {
+    background-color: $color-primario;
+}
+
+.img-fluid {
+    align-items: center;
+    justify-content: center;
+    height: $altura-4;
+    display: flex;
+    margin: $margen-2;
+    width: 87%;
+}
+
+.fondo2 {
     background-color: $color-secundario;
 }
- .casas1-3{
+
+.casas1-3 {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 25px;
+    margin-top: 100px;
+}
+
+.casas4-6 {
     display: flex;
     justify-content: space-around;
 }
- .casas4-6{
-    display: flex;
-    justify-content: space-around;
-}
- .fondo3{
+
+.fondo3 {
     background: rgb(246, 111, 7);
 }
- .fondo4{
+
+.fondo4 {
     background: rgb(141, 54, 241);
 }
-.fondo5{
+
+.fondo5 {
     background: rgb(0, 0, 0);
+}
+
+.scooby {
+    display: flex;
+    padding-right: 100px;
 }
