--- a/css/styles.css
+++ b/css/styles.css
@@ -1,61 +1,21 @@
-.fred {
+.Foto-cara {
   width: 200px;
   height: 200px;
   border-radius: 10px;
 }
 
-.daphne {
-  width: 200px;
-  height: 200px;
-  border-radius: 10px;
-}
-
-.velma {
-  width: 200px;
-  height: 200px;
-  border-radius: 10px;
-}
-
-.shaggy {
-  width: 200px;
-  height: 200px;
-  border-radius: 10px;
-}
-
-.scooby {
-  width: 200px;
-  height: 200px;
-  border-radius: 10px;
-}
-
-.casa-1 {
+.card-img-top {
   width: 250px;
   height: 200px;
+  display: flex;
+  margin-top: 20px;
 }
 
-.casa-2 {
-  width: 250px;
-  height: 200px;
-}
-
-.casa-3 {
-  width: 250px;
-  height: 200px;
-}
-
-.casa-4 {
-  width: 250px;
-  height: 200px;
-}
-
-.casa-5 {
-  width: 250px;
-  height: 200px;
-}
-
-.casa-6 {
-  width: 250px;
-  height: 200px;
+.card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-height: 630px;
 }
 
 .reloj1 {
@@ -63,30 +23,23 @@
   height: 200px;
   border-radius: 20px;
   margin: 30px;
+  margin-right: 30px;
 }
 
-.candado2 {
+.candadoycorona {
   width: 200px;
   height: 200px;
   border-radius: 20px;
   margin: 30px;
 }
 
-.corona3 {
-  width: 200px;
-  height: 200px;
-  border-radius: 20px;
-  margin: 30px;
-}
-
-.scoobyneta {
-  width: 1300px;
+.cazafantasmas {
+  align-items: center;
+  justify-content: center;
   height: 530px;
   display: flex;
   margin: 78px;
-  align-items: center;
-  justify-content: center;
-  width: 60%;
+  width: 87%;
 }
 
 .fondo1 {
@@ -109,6 +62,8 @@
 .casas1-3 {
   display: flex;
   justify-content: space-around;
+  padding-bottom: 25px;
+  margin-top: 100px;
 }
 
 .casas4-6 {
@@ -128,12 +83,24 @@
   background: rgb(0, 0, 0);
 }
 
+.scooby {
+  display: flex;
+  padding-right: 100px;
+}
+
 .tituloP {
   color: rgb(0, 0, 0);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding-top: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+a {
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 p {
@@ -241,6 +208,18 @@ h2 {
 
 .titulo23 {
   color: rgb(240, 41, 41);
+  padding-top: 100px;
+  padding-bottom: 20px;
+}
+
+.titulo4 {
+  padding-top: 70px;
+  padding-bottom: 25px;
+}
+
+.h2inicio {
+  text-align: center;
+  color: green;
 }
 
 .contenedor {
@@ -384,26 +363,6 @@ h2 {
   box-shadow: 1px 1px 4px 2px rgb(0, 0, 0);
 }
 
-.container4 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background: rgb(54, 173, 242);
-  font-family: "Courier New", Courier, monospace;
-  padding: 0 20px;
-}
-
-.card-container4 {
-  display: flex;
-  width: 600px;
-  height: auto;
-  background: #ffffff;
-  border-radius: 2px;
-  box-shadow: 1px 1px 4px 2px rgb(0, 0, 0);
-  text-align: center;
-}
-
 .container5 {
   display: flex;
   align-items: center;
@@ -434,6 +393,7 @@ h2 {
   align-items: center;
   background-color: rgb(54, 173, 242);
   font-size: larger;
+  margin-top: 80px;
 }
 
 .login {
@@ -489,410 +449,16 @@ h2 {
   align-items: column;
 }
 
-.tituloP {
-  color: rgb(0, 0, 0);
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  padding-top: 120px;
-}
-
-p {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: larger;
-}
-
-.Foto-cara {
-  width: 200px;
-  height: 200px;
-  border-radius: 10px;
-}
-
-.card-img-top {
-  width: 250px;
-  height: 200px;
-  display: flex;
-  margin-top: 20px;
-}
-
-.card {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-height: 630px;
-}
-
-.reloj1 {
-  width: 200px;
-  height: 200px;
-  border-radius: 20px;
-  margin: 30px;
-  margin-right: 30px;
-}
-
-.candado2 {
-  width: 200px;
-  height: 200px;
-  border-radius: 20px;
-  margin: 30px;
-}
-
-.corona3 {
-  width: 200px;
-  height: 200px;
-  border-radius: 20px;
-  margin: 30px;
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-.contenedor {
-  margin-bottom: 20px;
-  text-align: center;
-  background-color: rgb(116, 193, 91);
-  display: flex;
-  width: 90%;
-  align-items: center;
-  margin-left: 5%;
-  margin-top: 5%;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
-p {
-  margin: 25px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
-.reloj {
-  background-color: rgb(116, 193, 91);
-  display: block;
-  align-items: center;
-  border-radius: 30px;
-  box-shadow: 2px 2px 10px;
-  width: 950px;
-  height: 500px;
-  text-align: center;
-}
-
-.candado {
-  background-color: rgb(116, 193, 91);
-  display: display;
-  align-items: center;
-  justify-content: center;
-  border-radius: 30px;
-  margin-left: 30px;
-  box-shadow: 2px 2px 10px;
-  width: 950px;
-  height: 500px;
-}
-
-.corona {
-  background-color: rgb(116, 193, 91);
-  display: block;
-  margin-left: 30px;
-  align-items: center;
-  border-radius: 30px;
-  box-shadow: 2px 2px 10px;
-  width: 950px;
-  height: 500px;
-}
-
-.nav {
-  background-color: rgb(0, 0, 0);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.offcanvas-body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: rgb(116, 193, 91);
-}
-
-.formularios {
-  display: flex;
-  align-items: column;
-}
-
-.fondo1 {
-  background-color: rgb(116, 193, 91);
-}
-
-.cazafantasmas {
-  align-items: center;
-  justify-content: center;
-  height: 530px;
-  display: flex;
-  margin: 78px;
-  width: 87%;
-}
-
-.proteccion {
-  text-align: center;
-}
-
-.container1 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background: rgb(54, 173, 242);
-  font-family: "Courier New", Courier, monospace;
-  padding: 0 20px;
-  text-align: center;
-}
-
-.card-container1 {
-  display: flex;
-  width: 600px;
-  height: auto;
-  background: #ffffff;
-  border-radius: 2px;
-  box-shadow: 1px 1px 4px 2px rgb(0, 0, 0);
-}
-
-.header1 {
-  border-right: 1px solid #ffffff;
-}
-
-.descripcion1 {
-  background: #ffffff;
-}
-
-.header1,
-.descripcion1 {
-  padding: 20px;
-  text-align: center;
-}
-
-.container2 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background: rgb(54, 173, 242);
-  font-family: "Courier New", Courier, monospace;
-  padding: 0 20px;
-  text-align: center;
-}
-
-.card-container2 {
-  display: flex;
-  width: 600px;
-  height: auto;
-  background: #ffffff;
-  border-radius: 2px;
-  box-shadow: 1px 1px 4px 2px rgb(0, 0, 0);
-}
-
-.header2 {
-  border-right: 1px solid #ffffff;
-}
-
-.descripcion2 {
-  background: #ffffff;
-}
-
-.header2,
-.descripcion2 {
-  padding: 20px;
-  text-align: center;
-}
-
-.container3 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background: rgb(54, 173, 242);
-  font-family: "Courier New", Courier, monospace;
-  padding: 0 20px;
-}
-
-.card-container3 {
-  display: flex;
-  width: 600px;
-  height: auto;
-  background: #ffffff;
-  border-radius: 2px;
-  box-shadow: 1px 1px 4px 2px rgb(0, 0, 0);
-}
-
-.header3 {
-  border-right: 1px solid #ffffff;
-}
-
-.descripcion3 {
-  background: #ffffff;
-}
-
-.header3,
-.descripcion3 {
-  padding: 20px;
-  text-align: center;
-}
-
-.header4 {
-  border-right: 1px solid #ffffff;
-}
-
-.descripcion4 {
-  background: #ffffff;
-}
-
-.header4,
-.descripcion4 {
-  padding: 20px;
-  text-align: center;
-}
-
-.container4 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background: rgb(54, 173, 242);
-  font-family: "Courier New", Courier, monospace;
-  padding: 0 20px;
-}
-
-.card-container4 {
-  display: flex;
-  width: 600px;
-  height: auto;
-  background: #ffffff;
-  border-radius: 2px;
-  box-shadow: 1px 1px 4px 2px rgb(0, 0, 0);
-  text-align: center;
-}
-
-.container5 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background: rgb(54, 173, 242);
-  font-family: "Courier New", Courier, monospace;
-  padding: 0 20px;
-}
-
-.card-container5 {
-  display: flex;
-  width: 600px;
-  height: auto;
-  background: #ffffff;
-  border-radius: 2px;
-  box-shadow: 1px 1px 4px 2px rgb(0, 0, 0);
-}
-
-.header5 {
-  border-right: 1px solid #ffffff;
-}
-
-.descripcion5 {
-  background: #ffffff;
-  width: 200px;
-}
-
-.header5,
-.descripcion5 {
-  padding: 20px;
-  text-align: center;
-}
-
-.divsupremo {
-  background: rgb(54, 173, 242);
-  display: block;
-}
-
-.links {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: rgb(54, 173, 242);
-  font-size: larger;
-  margin-top: 80px;
-}
-
-a {
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-.fondo2 {
-  background-color: rgb(54, 173, 242);
-}
-
-.casas1-3 {
-  display: flex;
-  justify-content: space-around;
-  padding-bottom: 25px;
-  margin-top: 100px;
-}
-
-.casas4-6 {
-  display: flex;
-  justify-content: space-around;
-}
-
-.fondo3 {
-  background: rgb(246, 111, 7);
-}
-
-.login {
-  display: flex;
-  justify-content: center;
-  margin-top: 220px;
-  margin-left: 580px;
-  text-align: center;
-  background: #ffffff;
-  padding: 40px;
-  width: 20%;
-  border-radius: 20px;
-  box-shadow: 2px 3px 3px 2px;
-}
-
-.fondo4 {
-  background: rgb(141, 54, 241);
-}
-
 .inputContainer {
   display: flex;
   margin-bottom: 10px;
   box-shadow: 4px 4px 4px;
-}
-
-.video {
-  display: flex;
-  justify-content: center;
-}
-
-.fondo5 {
-  background: rgb(0, 0, 0);
-}
-
-h2 {
-  text-align: center;
-  color: rgb(54, 173, 242);
-}
-
-.titulo23 {
-  color: rgb(240, 41, 41);
-  padding-top: 100px;
-  padding-bottom: 20px;
-}
-
-.titulo4 {
-  padding-top: 70px;
-  padding-bottom: 25px;
-}
-
-.scooby {
-  display: flex;
-  padding-right: 100px;
 }
 
 @media (max-width: 376px) {
