--- a/SCSS/_estructuras.scss
+++ b/SCSS/_estructuras.scss
@@ -172,3 +172,12 @@
     display: flex;
     justify-content: center;
 }
+
+ .lista-spotify{
+    width:100%; 
+    height:352px;
+ }
+
+ .card{
+   width: 18rem
+ }
