--- a/SCSS/_medidas.scss
+++ b/SCSS/_medidas.scss
@@ -7,6 +7,7 @@ $anchura-primaria: 200px;
 $anchura-secundaria: 250px;
 $anchura-terciaria: 600px;
 $anchura-4: 950px;
+$anchura-5: 100%;
 
 $bordes-1: 10px;
 $bordes-2: 20px;
@@ -19,5 +20,9 @@ $sombra-2: 2px 2px 10px;
 $margen-1: 30px;
 $margen-2: 78px;
 $margen-izquierdo: 30px;
+$margen-izquierdo-2: 100px;
+$margen-derecho: 100px;
 
 $padding: 20px;
+$padding-2: 10px;
+$padding-izquierdo: 15px;
